--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -24,6 +24,7 @@
                 <a class="flex items-center px-3 py-2 rounded hover:bg-[#2c5282] {% block menu_dashboard %}{% endblock %}" href="{% url 'admin_dashboard' %}"><span class="sidebar-label">Dashboard</span></a>
                 <a class="flex items-center px-3 py-2 rounded hover:bg-[#2c5282] {% block menu_clientes %}{% endblock %}" href="{% url 'admin_clientes' %}"><span class="sidebar-label">Clientes</span></a>
                 <a class="flex items-center px-3 py-2 rounded hover:bg-[#2c5282] {% block menu_contas %}{% endblock %}" href="{% url 'admin_contas' %}"><span class="sidebar-label">Contas Fidelidade</span></a>
+                <a class="flex items-center px-3 py-2 rounded hover:bg-[#2c5282] {% block menu_contas_adm %}{% endblock %}" href="{% url 'admin_contas_administradas' %}"><span class="sidebar-label">Contas Administradas</span></a>
                 <a class="flex items-center px-3 py-2 rounded hover:bg-[#2c5282] {% block menu_cotacoes_voo %}{% endblock %}" href="{% url 'admin_cotacoes_voo' %}"><span class="sidebar-label">Cotações</span></a>
                 <a class="flex items-center px-3 py-2 rounded hover:bg-[#2c5282] {% block menu_emissoes %}{% endblock %}" href="{% url 'admin_emissoes' %}"><span class="sidebar-label">Emissões</span></a>
                 <a class="flex items-center px-3 py-2 rounded hover:bg-[#2c5282] {% block menu_hoteis %}{% endblock %}" href="{% url 'admin_hoteis' %}"><span class="sidebar-label">Hotéis</span></a>
